@@ -1,0 +1,1 @@
+#define BUG_ADDRESS "issue@texjp.org"
